Fix misaligned comment counts in sidebar when heading is long

--- a/assets/less/hel/hearing-page.less
+++ b/assets/less/hel/hearing-page.less
@@ -24,6 +24,16 @@
             margin-bottom: 0;
             margin-top: 20px;
         }
+
+        a.list-group-item {
+          display: flex;
+          justify-content: space-between;
+
+          .comment-icon {
+              flex-shrink: 0;
+          }
+        }
+
         .list-group-item:first-letter {
             text-transform:capitalize;
         }
